--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,10 @@
 language: node_js
 node_js:
-  - "6"
-  - "6.1"
-  - "5.11"
-  - "0.10"
-  - "iojs"
+  - "8.7"
 addons:
   code_climate:
     repo_token: $CODECLIMATE_REPO_TOKEN
+script:
+  - echo Hello World && sleep 30 && exit 1
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
-deploy:
-  provider: npm
-  email: "$EMAIL"
-  api_key: "$NPM_API_KEY"
-  on:
-    tags: true
