--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
   code_climate:
     repo_token: $CODECLIMATE_REPO_TOKEN
 script:
-  - echo Hello World && sleep 30 && exit 1
+  - echo Hello World 
+  - echo 'oh la lah' 
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
