--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ addons:
   code_climate:
     repo_token: $CODECLIMATE_REPO_TOKEN
 script:
-  - echo Hello World 
-  - echo 'oh la lah' 
+  - echo Hello World # welcome
+  - echo 'oh la lah' # being playful
+  - npm run-script example-server &  # Run the server and put into background
+  - sleep 10  # wait for server to initialize
+  - nc -zv localhost 3868 && echo "Server works. Success"
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
